REL-3447: Upping max memory allocation.